--- a/home/templates/home/preview/mentorapproval.html
+++ b/home/templates/home/preview/mentorapproval.html
@@ -10,11 +10,10 @@
 
 <h1>
 	{{ mentorapproval.get_approval_status_display }}
-	Mentor for
-	<a href="{{ project.get_preview_url }}">{{ project.short_title }}</a>
+	Mentor for {{ community.name }}
 </h1>
 
-<p>{{ mentor.public_name }} &lt;{{ mentor.account.email }}&gt;</p>
+<p>Please read through the answers {{ mentor.public_name }} has provided and decide whether they should be approved as a mentor for the {{ community.name }} internship project proposal <a href="{{ project.get_preview_url }}">"{{ project.short_title }}"</a></p>
 
 {% if mentorapproval.approval_status == mentorapproval.PENDING %}
 {% if mentorapproval|is_approver:request.user %}
