Add word "Preview" to inline community and project information.
Fixes #39

--- a/home/templates/home/community_read_only.html
+++ b/home/templates/home/community_read_only.html
@@ -240,7 +240,7 @@ Past community participation in Outreachy
 		<p>Do you need to update information about your community's participation in this round (such as number of interns funded or call for volunteers text)?</p>
 		<p><a class="btn btn-primary" href="{% url 'participation-action' action='submit' community_slug=community.slug %}">Update Round Info</a></p>
 		<div class="card">
-			<div class="card-header">Community Information for Applicants</div>
+			<div class="card-header">Preview - Community Information for Applicants</div>
 			<div class="card-body">
 			{% include "home/snippet/community_landing_snippet.html" %}
 			</div>
