--- a/home/templates/home/project_read_only.html
+++ b/home/templates/home/project_read_only.html
@@ -125,7 +125,7 @@
 
 {% if coordinator or mentor_request and mentor_request.approval_status == mentor_request.APPROVED %}
 	<div class="card">
-		<div class="card-header">Project Information for Applicants</div>
+		<div class="card-header">Preview - Project Information for Applicants</div>
 		<div class="card-body">
 			<p>This information will be displayed to the applicants on the project landing page.</p>
 			<h3>Project Description</h3>
