Wordsmith project read only page

--- a/home/templates/home/project_read_only.html
+++ b/home/templates/home/project_read_only.html
@@ -185,10 +185,10 @@
 					{% include "home/snippet/mentor_info_for_landing.html" with approval=approval only %}
 				{% endfor %}
 			{% endif %}
-			<p>Please contact the mentors of this project to get information on how you can make a contribution during the application process. Only applicants who make a contribution will be accepted as interns.</p>
+			<p>Please contact the mentors for this internship project to get information on how you can make a contribution during the application process. Only applicants who make a contribution will be accepted as interns.</p>
 
 			<h3>Interacting with the {{ community.name }} Community</h3>
-			<p>Contributions applicants and interns make are often reviewed by community members other than your mentor. Community members are there to answer your questions, give you feedback, and help you grow your skills.
+			<p>Applicants and interns' contributions are often reviewed by community members other than your mentor. Community members are there to answer your questions, give you feedback, and help you grow your skills.
 			<p>During this internship project, you'll be interacting with a team of {{ project.get_community_size_display }}. The community has been accepting contributions from people from around the world for {{ project.get_longevity_display }}.</p>
 
 			<p>Contributors to Free and Open Source Software (FOSS) projects discuss issues, documentation, user experience, and feature design in public communication channels.
