Reassure coordinators they can editing funding information later.
Partially implements #35

--- a/home/templates/home/preview/participation_action.html
+++ b/home/templates/home/preview/participation_action.html
@@ -23,7 +23,7 @@
 		</div>
 	</div>
 	<h2>Intern Funding</h2>
-	<p>Funding for {{ participation.community.name }} interns may come from a number of different sources.</p>
+	<p>Funding for {{ participation.community.name }} interns may come from a number of different sources. It's ok if you don't know all the information about your sponsors, or you are waiting to recieve final confirmation of your budget. You can always come back and edit this form later.</p>
 
 	<h3>Community funds</h3>
 	<p>FOSS communities often fund Outreachy interns directly from their own community funds, or by using funds from the foundation or non-profit who is their fiscal sponsor.</p>
