Use new methods like get_submit_url in templates.
Fixes #74: the dashboard buttons work now.

--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -18,25 +18,25 @@ Dashboard
 		<div class="mx-auto mr-sm-0" role="group" aria-label="Actions">
 		{% if obj.approval_status == obj.APPROVED %}
 			{% if obj|is_submitter:request.user %}
-			<a href="#" class="btn btn-warning">Withdraw</a>
+			<a href="{{ obj.get_withdraw_url }}" class="btn btn-warning">Withdraw</a>
 			{% endif %}
 			{% if obj|is_approver:request.user %}
-			<a href="#" class="btn btn-danger">Reject</a>
+			<a href="{{ obj.get_reject_url }}" class="btn btn-danger">Reject</a>
 			{% endif %}
 		{% elif obj.approval_status == obj.PENDING %}
 			{% if obj|is_approver:request.user %}
 			<a href="{{ obj.get_preview_url }}" class="btn btn-primary">Review</a>
 			{% endif %}
 			{% if obj|is_submitter:request.user %}
-			<a href="#" class="btn btn-warning">Withdraw</a>
+			<a href="{{ obj.get_withdraw_url }}" class="btn btn-warning">Withdraw</a>
 			{% endif %}
 		{% elif obj.approval_status == obj.WITHDRAWN %}
 			{% if obj|is_submitter:request.user %}
-			<a href="#" class="btn btn-success">Resubmit</a>
+			<a href="{{ obj.get_submit_url }}" class="btn btn-success">Resubmit</a>
 			{% endif %}
 		{% elif obj.approval_status == obj.REJECTED %}
 			{% if obj|is_approver:request.user %}
-			<a href="#" class="btn btn-success">Approve</a>
+			<a href="{{ obj.get_approve_url }}" class="btn btn-success">Approve</a>
 			{% endif %}
 		{% endif %}
 		</div>
