--- a/home/templates/home/community_read_only.html
+++ b/home/templates/home/community_read_only.html
@@ -219,10 +219,10 @@ Past community participation in Outreachy
 			<li>CFP text: {{ participation_info.cfp_text }}</li>
 		</ul>
 		{% if participation_info.approval_status != participation_info.APPROVED %}
-		<a href="{% url 'participation-action' action='approve' community_slug=community.slug %}" class="btn btn-success">Approve Community</a>
+		<a href="{{ participation_info.get_approve_url }}" class="btn btn-success">Approve Community</a>
 		{% endif %}
 		{% if participation_info.approval_status != participation_info.REJECTED %}
-		<a href="{% url 'participation-action' action='reject' community_slug=community.slug %}" class="btn btn-warning">Reject Community</a>
+		<a href="{{ participation_info.get_reject_url }}" class="btn btn-warning">Reject Community</a>
 		{% endif %}
 	{% endif %}
 {% endif %}
@@ -237,12 +237,12 @@ Past community participation in Outreachy
 		<p><a class="btn btn-success" href="{% url 'participation-action' action='submit' community_slug=community.slug %}">Community will participate</a></p>
 	{% elif participation_info.approval_status == participation_info.WITHDRAWN %}
 		<p>Have you changed your mind and decided your community can participate in this round of Outreachy?</p>
-		<p><a class="btn btn-success" href="{% url 'participation-action' action='submit' community_slug=community.slug %}">Community will participate</a></p>
+		<p><a class="btn btn-success" href="{{ participation_info.get_submit_url }}">Community will participate</a></p>
 	{% elif participation_info.approval_status == participation_info.REJECTED %}
 		<p>Unfortunately, the Outreachy organizers have determined your community should not participate in this round. Please <a href="/contact/">contact us</a> for more details.</p>
 	{% else %}
 		<p>Do you need to update information about your community's participation in this round (such as number of interns funded or call for volunteers text)?</p>
-		<p><a class="btn btn-primary" href="{% url 'participation-action' action='submit' community_slug=community.slug %}">Update Round Info</a></p>
+		<p><a class="btn btn-primary" href="{{ participation_info.get_submit_url }}">Update Round Info</a></p>
 		<div class="card">
 			<div class="card-header">Preview - Community Information for Applicants</div>
 			<div class="card-body">
