--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -6,6 +6,7 @@ Dashboard
 {% endblock %}
 
 {% block content %}
+<a href="{% url 'community-cfp' %}">Timeline, FAQ, & Participating Communities</a> &gt; Dashboard
 <h1>Dashboard</h1>
 
 {% for status, group in groups %}
